--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,46 @@
 # Godot 4+ specific ignores
 .godot/
 /android/
-# Godot specific files and folders
 
-# .godot/ is the place for the project-specific cache and local settings.
-# It should generally be ignored, except for files that Godot itself recommends
-# keeping in version control (like version.cfg or certain shader caches).
-# The Godot editor will automatically recreate this folder.
-.godot/
-
-# Ignore C# Godot tools files
-# If you are using C# with Godot.
-**/*.csproj
-**/*.sln
-**/.mono/
-**/.mono
-**/.vs/
-**/*.user
-**/*.suo
-
-# Ignore exported game builds and related files
-# The 'export' folder is a common place for builds.
-/export/
-/builds/
-*.apk
-*.exe
-*.zip
-*.pck
-*.dbg
-*.aab
+# Godot-specific
+*.translation
+*.import
 *.uid
-*.import
-*.cfg
-# Ignore generated editor/tool temporary files
-# Files created by the editor or external tools that shouldn't be committed.
-*.gltf.bin
-*.import
-*.mel
-*.obj
+.mono/
+data_*/
+mono_crash.*.json
 
-# Ignore common OS-specific files
+# Import cache
+.import/
+
+# Builds and exports
+*.exe
+*.pck
+*.zip
+*.apk
+*.dmg
+*.app
+export_presets.cfg
+export.cfg
+
+# OS/Editor specific
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+*~
+*.swp
+*.swo
+*.tmp
+
+# IDE specific
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Logs
+*.log
