--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,8 +16,8 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://World/", "res://Enemy/")
+dock_filesystem_selected_paths=PackedStringArray("res://Utility/typechart.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://World/", "res://Utility/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,12 +29,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://World/world.tscn", "res://Player/player.tscn", "res://Enemy/enemy_kobold_weak.tscn", "res://Utility/hurt_box.tscn", "res://Player/Attack/ice_spear.tscn", "res://Enemy/damage_text.tscn", "res://Utility/DamageText.tscn")
-current_scene="res://Utility/DamageText.tscn"
+open_scenes=PackedStringArray("res://World/world.tscn", "res://Player/player.tscn", "res://Enemy/enemy_kobold_weak.tscn", "res://Utility/hurt_box.tscn", "res://Player/Attack/ice_spear.tscn", "res://Utility/DamageText.tscn")
+current_scene="res://Utility/hurt_box.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -42,7 +42,7 @@ open_scripts=["res://Utility/basic_button.gd", "res://Utility/damage_text.gd", "
 open_help=["@GlobalScope", "PropertyTweener", "Tween", "Vector2"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Utility/damage_text.gd"
+selected_script="res://Utility/typechart.gd"
 zoom_factor=1.0
 
 [EditorWindow]
