--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
-"folded_lines": Array[int]([250, 253, 256, 258, 261, 264, 267, 270, 273, 276, 278, 280]),
+"column": 1,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 165,
-"scroll_position": 303.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 165,
-"selection_to_column": 7,
-"selection_to_line": 165,
+"row": 114,
+"scroll_position": 101.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 52,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 51,
-"scroll_position": 2.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 51,
-"selection_to_column": 16,
-"selection_to_line": 57,
+"row": 45,
+"scroll_position": 30.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -53,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 47,
-"scroll_position": 0.0,
+"row": 9,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -67,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 0.0,
+"row": 37,
+"scroll_position": 22.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -100,11 +92,7 @@ state={
 "h_scroll_position": 0,
 "row": 62,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 62,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -132,11 +120,7 @@ state={
 "h_scroll_position": 0,
 "row": 95,
 "scroll_position": 30.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 95,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -145,11 +129,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
-"folded_lines": Array[int]([53, 61]),
+"column": 0,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 116,
-"scroll_position": 45.0,
+"row": 135,
+"scroll_position": 120.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -159,11 +143,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 27,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -187,16 +171,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 50,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 3,
-"selection_to_column": 50,
-"selection_to_line": 3,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
