--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=269
+dock_hsplit_2=268
 dock_hsplit_3=-248
 dock_hsplit_4=0
 dock_3_selected_tab_idx=0
@@ -16,8 +16,8 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=180
 dock_filesystem_v_split_offset=0
-dock_filesystem_selected_paths=PackedStringArray("res://Utility/typechart.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://World/", "res://Utility/")
+dock_filesystem_selected_paths=PackedStringArray("res://Enemy/enemy_kobold_weak.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://World/", "res://Utility/", "res://Enemy/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,26 +30,26 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://World/world.tscn", "res://Player/player.tscn", "res://Enemy/enemy_kobold_weak.tscn", "res://Utility/hurt_box.tscn", "res://Player/Attack/ice_spear.tscn", "res://Utility/DamageText.tscn")
-current_scene="res://Utility/hurt_box.tscn"
+current_scene="res://Player/player.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Utility/basic_button.gd", "res://Utility/damage_text.gd", "res://World/damage_text_pool.gd", "res://Enemy/enemy.gd", "res://Utility/enemy_spawner.gd", "res://Objects/experience_gem.gd", "res://Enemy/explosion.gd", "res://Utility/hit_box.gd", "res://Utility/hurt_box.gd", "res://Player/Attack/ice_spear.gd", "res://Player/GUI/item_container.gd", "res://Utility/item_option.gd", "res://Player/Attack/javelin.gd", "res://TitleScreen/menu.gd", "res://Player/player.gd", "res://Audio/Music/snd_Music.gd", "res://Utility/spawn_info.gd", "res://Player/Attack/tornado.gd", "res://Utility/typechart.gd", "res://Utility/upgrade_db.gd"]
+open_scripts=["res://Utility/basic_button.gd", "res://Enemy/color_rect.gd", "res://Utility/damage_text.gd", "res://World/damage_text_pool.gd", "res://Enemy/enemy.gd", "res://Utility/enemy_spawner.gd", "res://Objects/experience_gem.gd", "res://Enemy/explosion.gd", "res://Utility/hit_box.gd", "res://Utility/hurt_box.gd", "res://Player/Attack/ice_spear.gd", "res://Player/GUI/item_container.gd", "res://Utility/item_option.gd", "res://Player/Attack/javelin.gd", "res://TitleScreen/menu.gd", "res://Player/player.gd", "res://Audio/Music/snd_Music.gd", "res://Utility/spawn_info.gd", "res://Player/Attack/tornado.gd", "res://Utility/typechart.gd", "res://Utility/upgrade_db.gd"]
 open_help=["@GlobalScope", "PropertyTweener", "Tween", "Vector2"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Utility/typechart.gd"
+selected_script="res://Utility/enemy_spawner.gd"
 zoom_factor=1.0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(16, 80)
+position=Vector2i(16, 53)
 
 [GameView]
 
